--- a/index.html
+++ b/index.html
@@ -10,6 +10,35 @@
    <title>Document</title>
 </head>
 <body>
+  <section class="principal">
+    <header>
+        <div class="boldo">
+            <img class="logo" src="img/Logo Shape.svg" alt="logo">
+            <h1>Boldo</h1>
+        </div>
+        <div class="links">
+            <ul>
+                <li>Product</li>
+                <li>Services</li>
+                <li>About</li>
+            </ul>
+            <p>Login In</p>
+        </div>
+    </header>
+    <div class="titulo">
+      <p>Blog</p>
+      <h1>Thoughts and words</h1>
+    </div>
+    <section class="section-dois">
+        <img class="segunda-img" src="img/Rectangle 1270.svg" alt="img e casa">
+        <div class="category">
+            <span>Category</span> <p>November 22, 2021</p>
+            <h2>Pitch termsheet backing validation focus release.</h2>
+            <img src="img/Ellipse 10.png" alt="foto de perfil">
+        </div>
+
+    </section>
+  </section>  
   
 </body>
 </html>
