primeira parte feita

--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
     </div>
     <section class="section-dois">
         <img class="segunda-img" src="img/Rectangle 1270.svg" alt="img e casa">
-        <div class="category">
-            <span>Category</span> <p>November 22, 2021</p>
-            <h2>Pitch termsheet backing validation focus release.</h2>
-            <img src="img/Ellipse 10.png" alt="foto de perfil">
-        </div>
+        <div class="sub-texto-dois">
+            <div class="category">
+               <p><span>Category</span> November 22, 2021</p>
+            </div> 
+            <h2>Pitch termsheet backing</h2> <h2>validation focus release.</h2>
+            <div class="ip">
+                <img class="img-dois" src="img/Ellipse 10.png" alt="foto de perfil">
+                <p>Chandler Bing</p></div>
+             </div>
 
     </section>
   </section>  
