responsivo da primeira sesao feito

--- a/index.html
+++ b/index.html
@@ -23,6 +23,11 @@
                 <li>About</li>
             </ul>
             <p>Login In</p>
+            <div class="pizza">
+              <div class="pz"></div>
+              <div class="pz"></div>
+              <div class="pz"></div>
+            </div>
         </div>
     </header>
     <div class="titulo">
