--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
                 <img class="img-dois" src="img/Ellipse 10.png" alt="foto de perfil">
                 <p>Chandler Bing</p></div>
              </div>
-
     </section>
+    <div class="linha"></div>
   </section>  
   
 </body>
