--- a/index.html
+++ b/index.html
@@ -40,13 +40,94 @@
             <div class="category">
                <p><span>Category</span> November 22, 2021</p>
             </div> 
-            <h2>Pitch termsheet backing</h2> <h2>validation focus release.</h2>
+            <h2>Pitch termsheet backing</h2> <h2 class="hh2">validation focus release.</h2>
             <div class="ip">
                 <img class="img-dois" src="img/Ellipse 10.png" alt="foto de perfil">
                 <p>Chandler Bing</p></div>
              </div>
     </section>
-    <div class="linha"></div>
+    <div class="linha"></div>  
+    <section class="section-tres">
+      <h1 class="latestnews">Latest news</h1>
+      <div class="container-card">
+        <div class="cards">
+          <div class="card-um">
+            <img src="img/card-um.png" class="img-card" alt="card-um">
+              <div class="category">
+                <p><span>Category</span> November 22, 2021</p>
+              </div> 
+                <h3>Pitch termsheet backing validation focus release.</h3>
+               </div>
+               <div class="ip">
+                <img class="img-dois" src="img/Ellipse 10.png" alt="foto de perfil">
+                <p>Chandler Bing</p></div>
+          </div>
+          <div class="cards">
+            <div class="card-um">
+              <img src="img/card-dois.png" class="img-card" alt="card-dois">
+                <div class="category">
+                  <p><span>Category</span> November 22, 2021</p>
+                </div> 
+                  <h3>Seed round direct mailing non-disclosure agreement graphical user interface rockstar.</h3>
+                 </div>
+                 <div class="ip">
+                  <img class="img-dois" src="img/fp-dois.png" alt="foto de perfil">
+                  <p>Rachel Green</p></div>
+            </div>
+            <div class="cards">
+              <div class="card-um">
+                <img src="img/card-tres.png" class="img-card" alt="card-tres">
+                  <div class="category">
+                    <p><span>Category</span> November 22, 2021</p>
+                  </div> 
+                    <h3>Beta prototype sales iPad gen-z marketing network effects value proposition</h3>
+                   </div>
+                   <div class="ip">
+                    <img class="img-dois" src="img/fp-tres.png" alt="foto de perfil">
+                    <p>Monica Geller</p></div>
+              </div>
+              <div class="cards">
+                <div class="card-um">
+                  <img src="img/card-quatro.png" class="img-card" alt="card-quatro">
+                    <div class="category">
+                      <p><span>Category</span> November 22, 2021</p>
+                    </div> 
+                      <h3>Pitch termsheet backing validation focus release.</h3>
+                     </div>
+                     <div class="ip">
+                      <img class="img-dois" src="img/Ellipse 10.png" alt="foto de perfil">
+                      <p>Chandler Bing</p></div>
+                </div>
+                <div class="cards">
+                  <div class="card-um">
+                    <img src="img/card-cinco.png" class="img-card" alt="card-cinco">
+                      <div class="category">
+                        <p><span>Category</span> November 22, 2021</p>
+                      </div> 
+                        <h3>Seed round direct mailing non-disclosure agreement graphical user interface rockstar.</h3>
+                       </div>
+                       <div class="ip">
+                        <img class="img-dois" src="img/fp-dois.png" alt="foto de perfil">
+                        <p>Rachel Green</p></div>
+                  </div>
+                  <div class="cards">
+                    <div class="card-um">
+                      <img src="img/card-seis.png" class="img-card" alt="card-seis">
+                        <div class="category">
+                          <p><span>Category</span> November 22, 2021</p>
+                        </div> 
+                          <h3>Beta prototype sales iPad gen-z marketing network effects value proposition.</h3>
+                         </div>
+                         <div class="ip">
+                          <img class="card-um" src="img/fp-tres.png" alt="foto de perfil">
+                          <p>Monica Geller</p></div>
+                    </div>
+        </div>
+        </div>
+
+    </section>
+
+
   </section>  
   
 </body>
