footer feito, site completo

--- a/index.html
+++ b/index.html
@@ -136,6 +136,36 @@
       </form>
     </div>
     </section>
+    <section class="footer">
+      <div class="footer-boldo">
+        <div class="boldo">
+          <img class="logo" src="img/Logo Shape.svg" alt="logo">
+          <h1>Boldo</h1>
+          
+      </div><div class="footer-p">
+          <p>Social media validation business model canvas graphical user interface launch party creative facebook iPad twitter.</p>
+      </div>
+        <p>All rights reserved.</p>
+      </div>
+      <ul class="footer-sobre">
+        <li class="footer-li-top">Landings</li>
+        <li class="footer-li">Home</li>
+        <li class="footer-li">Products</li>
+        <li class="footer-li">Services</li>
+      </ul>
+      <ul class="footer-sobre">
+        <li class="footer-li-top">Company</li>
+        <li class="footer-li">Home</li>
+        <li class="footer-li">Careers <span class="footer-verde">Hiring!</span></li>
+        <li class="footer-li">Services</li>
+      </ul>
+      <ul class="footer-sobre">
+        <li class="footer-li-top">Resources</li>
+        <li class="footer-li">Home</li>
+        <li class="footer-li">Products</li>
+        <li class="footer-li">Services</li>
+      </ul>
+    </section>
 
 
   </section>  
